第二次提交

--- a/project.config.json
+++ b/project.config.json
@@ -37,7 +37,7 @@
   "compileType": "miniprogram",
   "libVersion": "2.12.2",
   "appid": "wx768b156663613a1c",
-  "projectname": "aws",
+  "projectname": "aws%20github%E7%89%88",
   "debugOptions": {
     "hidedInDevtools": []
   },
