修复了currentTab由于setData反复回调跳动的问题

--- a/project.config.json
+++ b/project.config.json
@@ -6,7 +6,7 @@
   "setting": {
     "urlCheck": true,
     "es6": true,
-    "enhance": false,
+    "enhance": true,
     "postcss": true,
     "preloadBackgroundData": false,
     "minified": true,
@@ -35,7 +35,7 @@
     "packNpmRelationList": []
   },
   "compileType": "miniprogram",
-  "libVersion": "2.12.2",
+  "libVersion": "2.13.0",
   "appid": "wx768b156663613a1c",
   "projectname": "aws%20github%E7%89%88",
   "debugOptions": {
