--- a/app.json
+++ b/app.json
@@ -7,7 +7,8 @@
     "pages/exam/index",
     "pages/exam_English/index",
     "pages/exam_collection/index",
-    "pages/exam_simulated/index"
+    "pages/exam_simulated/index",
+    "pages/exam_quick/index"
   ],
   "window": {
     "backgroundTextStyle": "light",
