--- a/project.config.json
+++ b/project.config.json
@@ -4,7 +4,7 @@
     "ignore": []
   },
   "setting": {
-    "urlCheck": false,
+    "urlCheck": true,
     "es6": true,
     "enhance": true,
     "postcss": true,
@@ -36,7 +36,7 @@
   },
   "compileType": "miniprogram",
   "libVersion": "2.13.0",
-  "appid": "wx768b156663613a1c",
+  "appid": "wxf0500bf05da4ac3f",
   "projectname": "aws",
   "debugOptions": {
     "hidedInDevtools": []
