--- a/project.config.json
+++ b/project.config.json
@@ -94,6 +94,13 @@
           "id": -1,
           "name": "pages/about/index",
           "pathName": "pages/about/index",
+          "query": "",
+          "scene": null
+        },
+        {
+          "id": -1,
+          "name": "about",
+          "pathName": "pages/about/index",
           "scene": null
         }
       ]
