同一了saa ccp sap 的样式
saa ccp sap 的题库请求是ok的 现在就是sap和ccp的if_vip Python的后台需要完善 mysql查询的时候需要对不同if_vip进行fetchall

--- a/project.config.json
+++ b/project.config.json
@@ -136,6 +136,13 @@
           "id": -1,
           "name": "pages/exam_remember/index",
           "pathName": "pages/exam_remember/index",
+          "query": "",
+          "scene": null
+        },
+        {
+          "id": -1,
+          "name": "pages/ccp/index",
+          "pathName": "pages/ccp/index",
           "scene": null
         }
       ]
