--- a/project.config.json
+++ b/project.config.json
@@ -143,6 +143,13 @@
           "id": -1,
           "name": "pages/ccp/index",
           "pathName": "pages/ccp/index",
+          "query": "",
+          "scene": null
+        },
+        {
+          "id": -1,
+          "name": "pages/cloud_about/index",
+          "pathName": "pages/cloud_about/index",
           "scene": null
         }
       ]
