--- a/app.json
+++ b/app.json
@@ -14,6 +14,10 @@
 
 
     "pages/saa_exam/index",
+    "pages/saa_exam_1/index",
+    "pages/saa_exam_2index",
+    "pages/saa_exam_3/index",
+    "pages/saa_exam_4/index",
     "pages/saa_exam_superman/index",
     "pages/saa_exam_remember/index",
     "pages/saa_exam_zen/index",
