--- a/app.json
+++ b/app.json
@@ -15,7 +15,7 @@
 
     "pages/saa_exam/index",
     "pages/saa_exam_1/index",
-    "pages/saa_exam_2index",
+    "pages/saa_exam_2/index",
     "pages/saa_exam_3/index",
     "pages/saa_exam_4/index",
     "pages/saa_exam_superman/index",
