--- a/project.config.json
+++ b/project.config.json
@@ -1,187 +1,191 @@
 {
-  "description": "项目配置文件",
-  "packOptions": {
-    "ignore": []
-  },
-  "setting": {
-    "urlCheck": true,
-    "es6": true,
-    "enhance": true,
-    "postcss": true,
-    "preloadBackgroundData": false,
-    "minified": true,
-    "newFeature": false,
-    "coverView": true,
-    "nodeModules": false,
-    "autoAudits": false,
-    "showShadowRootInWxmlPanel": true,
-    "scopeDataCheck": false,
-    "uglifyFileName": false,
-    "checkInvalidKey": true,
-    "checkSiteMap": true,
-    "uploadWithSourceMap": true,
-    "compileHotReLoad": false,
-    "useMultiFrameRuntime": false,
-    "useApiHook": true,
-    "babelSetting": {
-      "ignore": [],
-      "disablePlugins": [],
-      "outputPath": ""
+    "description": "项目配置文件",
+    "packOptions": {
+        "ignore": []
     },
-    "useIsolateContext": true,
-    "useCompilerModule": true,
-    "userConfirmedUseCompilerModuleSwitch": false,
-    "packNpmManually": false,
-    "packNpmRelationList": []
-  },
-  "compileType": "miniprogram",
-  "libVersion": "2.13.1",
-  "appid": "wxf0500bf05da4ac3f",
-  "projectname": "aws",
-  "debugOptions": {
-    "hidedInDevtools": []
-  },
-  "scripts": {},
-  "isGameTourist": false,
-  "simulatorType": "wechat",
-  "simulatorPluginLibVersion": {},
-  "condition": {
-    "plugin": {
-      "list": []
+    "setting": {
+        "urlCheck": true,
+        "es6": true,
+        "enhance": true,
+        "postcss": true,
+        "preloadBackgroundData": false,
+        "minified": true,
+        "newFeature": false,
+        "coverView": true,
+        "nodeModules": false,
+        "autoAudits": false,
+        "showShadowRootInWxmlPanel": true,
+        "scopeDataCheck": false,
+        "uglifyFileName": false,
+        "checkInvalidKey": true,
+        "checkSiteMap": true,
+        "uploadWithSourceMap": true,
+        "compileHotReLoad": false,
+        "lazyloadPlaceholderEnable": false,
+        "useMultiFrameRuntime": false,
+        "useApiHook": false,
+        "useApiHostProcess": false,
+        "babelSetting": {
+            "ignore": [],
+            "disablePlugins": [],
+            "outputPath": ""
+        },
+        "enableEngineNative": false,
+        "useIsolateContext": true,
+        "userConfirmedBundleSwitch": false,
+        "packNpmManually": false,
+        "packNpmRelationList": [],
+        "minifyWXSS": true,
+        "showES6CompileOption": false
     },
-    "game": {
-      "list": []
+    "compileType": "miniprogram",
+    "libVersion": "2.13.1",
+    "appid": "wxf0500bf05da4ac3f",
+    "projectname": "aws",
+    "debugOptions": {
+        "hidedInDevtools": []
     },
-    "gamePlugin": {
-      "list": []
-    },
-    "miniprogram": {
-      "list": [
-        {
-          "id": -1,
-          "name": "exam",
-          "pathName": "pages/exam/index",
-          "query": "",
-          "scene": null
+    "scripts": {},
+    "isGameTourist": false,
+    "simulatorType": "wechat",
+    "simulatorPluginLibVersion": {},
+    "condition": {
+        "plugin": {
+            "list": []
         },
-        {
-          "id": -1,
-          "name": "pages/ccp/index",
-          "pathName": "pages/ccp/index",
-          "query": "",
-          "scene": null
+        "game": {
+            "list": []
         },
-        {
-          "id": -1,
-          "name": "saa",
-          "pathName": "pages/saa/index",
-          "query": "",
-          "scene": null
+        "gamePlugin": {
+            "list": []
         },
-        {
-          "id": -1,
-          "name": "pages/about/index",
-          "pathName": "pages/about/index",
-          "query": "",
-          "scene": null
-        },
-        {
-          "id": -1,
-          "name": "about",
-          "pathName": "pages/about/index",
-          "query": "",
-          "scene": null
-        },
-        {
-          "id": -1,
-          "name": "cloud",
-          "pathName": "pages/cloud/index",
-          "query": "",
-          "scene": null
-        },
-        {
-          "id": -1,
-          "name": "pages/sap/index",
-          "pathName": "pages/sap/index",
-          "query": "",
-          "scene": null
-        },
-        {
-          "id": -1,
-          "name": "pages/test/index",
-          "pathName": "pages/test/index",
-          "query": "",
-          "scene": null
-        },
-        {
-          "id": -1,
-          "name": "pages/exam_superman/index",
-          "pathName": "pages/exam_superman/index",
-          "query": "",
-          "scene": null
-        },
-        {
-          "id": -1,
-          "name": "pages/exam_remember/index",
-          "pathName": "pages/exam_remember/index",
-          "query": "",
-          "scene": null
-        },
-        {
-          "id": -1,
-          "name": "pages/ccp/index",
-          "pathName": "pages/ccp/index",
-          "query": "",
-          "scene": null
-        },
-        {
-          "id": -1,
-          "name": "pages/cloud_about/index",
-          "pathName": "pages/cloud_about/index",
-          "query": "",
-          "scene": null
-        },
-        {
-          "id": -1,
-          "name": "pages/saa/index",
-          "pathName": "pages/saa/index",
-          "query": "",
-          "scene": null
-        },
-        {
-          "id": -1,
-          "name": "quickl",
-          "pathName": "pages/quickl/index",
-          "query": "",
-          "scene": null
-        },
-        {
-          "id": 14,
-          "name": "quickkkk",
-          "pathName": "pages/saa/index",
-          "query": "",
-          "scene": null
-        },
-        {
-          "id": -1,
-          "name": "pages/saa_exam_quick/index",
-          "pathName": "pages/saa_exam_quick/index",
-          "query": "",
-          "scene": null
-        },
-        {
-          "id": -1,
-          "name": "pages/cloud_cloud/index",
-          "pathName": "pages/cloud_cloud/index",
-          "query": "",
-          "scene": null
-        },
-        {
-          "name": "pages/cloud_about/index",
-          "pathName": "pages/cloud_about/index",
-          "scene": null
+        "miniprogram": {
+            "list": [
+                {
+                    "id": -1,
+                    "name": "exam",
+                    "pathName": "pages/exam/index",
+                    "query": "",
+                    "scene": null
+                },
+                {
+                    "id": -1,
+                    "name": "pages/ccp/index",
+                    "pathName": "pages/ccp/index",
+                    "query": "",
+                    "scene": null
+                },
+                {
+                    "id": -1,
+                    "name": "saa",
+                    "pathName": "pages/saa/index",
+                    "query": "",
+                    "scene": null
+                },
+                {
+                    "id": -1,
+                    "name": "pages/about/index",
+                    "pathName": "pages/about/index",
+                    "query": "",
+                    "scene": null
+                },
+                {
+                    "id": -1,
+                    "name": "about",
+                    "pathName": "pages/about/index",
+                    "query": "",
+                    "scene": null
+                },
+                {
+                    "id": -1,
+                    "name": "cloud",
+                    "pathName": "pages/cloud/index",
+                    "query": "",
+                    "scene": null
+                },
+                {
+                    "id": -1,
+                    "name": "pages/sap/index",
+                    "pathName": "pages/sap/index",
+                    "query": "",
+                    "scene": null
+                },
+                {
+                    "id": -1,
+                    "name": "pages/test/index",
+                    "pathName": "pages/test/index",
+                    "query": "",
+                    "scene": null
+                },
+                {
+                    "id": -1,
+                    "name": "pages/exam_superman/index",
+                    "pathName": "pages/exam_superman/index",
+                    "query": "",
+                    "scene": null
+                },
+                {
+                    "id": -1,
+                    "name": "pages/exam_remember/index",
+                    "pathName": "pages/exam_remember/index",
+                    "query": "",
+                    "scene": null
+                },
+                {
+                    "id": -1,
+                    "name": "pages/ccp/index",
+                    "pathName": "pages/ccp/index",
+                    "query": "",
+                    "scene": null
+                },
+                {
+                    "id": -1,
+                    "name": "pages/cloud_about/index",
+                    "pathName": "pages/cloud_about/index",
+                    "query": "",
+                    "scene": null
+                },
+                {
+                    "id": -1,
+                    "name": "pages/saa/index",
+                    "pathName": "pages/saa/index",
+                    "query": "",
+                    "scene": null
+                },
+                {
+                    "id": -1,
+                    "name": "quickl",
+                    "pathName": "pages/quickl/index",
+                    "query": "",
+                    "scene": null
+                },
+                {
+                    "id": 14,
+                    "name": "quickkkk",
+                    "pathName": "pages/saa/index",
+                    "query": "",
+                    "scene": null
+                },
+                {
+                    "id": -1,
+                    "name": "pages/saa_exam_quick/index",
+                    "pathName": "pages/saa_exam_quick/index",
+                    "query": "",
+                    "scene": null
+                },
+                {
+                    "id": -1,
+                    "name": "pages/cloud_cloud/index",
+                    "pathName": "pages/cloud_cloud/index",
+                    "query": "",
+                    "scene": null
+                },
+                {
+                    "name": "pages/cloud_about/index",
+                    "pathName": "pages/cloud_about/index",
+                    "scene": null
+                }
+            ]
         }
-      ]
     }
-  }
 }
